--- a/bitlab/scss/layout/_content.scss
+++ b/bitlab/scss/layout/_content.scss
@@ -829,10 +829,6 @@ h3{
 			background: none;
 			display: inline-block;
 			padding: 7.5px 25px;
-			&.active{
-				color: #fff;
-				background: #dc1837;
-			}
 			&::before, &::after{
 				position: absolute;
 		    	background: #dc1837;
@@ -883,6 +879,35 @@ h3{
 					width: 90%;
 				}
 			}
+		}
+		&_active{
+			span{
+				color: #fff;
+				background: #dc1837;
+			}
+		}
+	}
+	&__items{
+		display: flex !important;
+	}
+	&__slider{
+		.slick-next, .slick-prev{
+			background: none;
+    		border: 0;
+    		position: absolute;
+    		top: 42%;
+    		z-index: 5;
+    		transition: filter 0.2s ease-in-out;
+			&:hover{
+				filter: brightness(0);
+			}
+		}
+		.slick-next{
+			right: -90px;
+		}
+		.slick-prev{
+			left: -90px;
+			transform: rotate(180deg);
 		}
 	}
 	&__item{
