--- a/medvag/css/style.css
+++ b/medvag/css/style.css
@@ -185,38 +185,48 @@ footer {
 }
 .contact__input {
   position: relative;
-  width: 22%;
+  width: 28%;
+  /*width: 295px;*/
   margin-right: 3%;
+  /*margin-right: 35px;*/
 }
 .contact__input label {
   color: #41474e;
-  font: 0.8854166666666666VW CT;
+  /*font: 0.8854166666666666VW CT;*/
+  font: 17px CT;
   position: absolute;
   letter-spacing: 0.06em;
-  top: 29%;
-  left: 7%;
+  			/*top: 29%;
+      		left: 7%;*/
+  top: 17px;
+  left: 20px;
 }
 .contact__input label span {
   color: #ea282d;
 }
 .contact__input input[type="text"] {
   color: #41474e;
-  font: 0.8854166666666666VW CT;
+  /*font: 0.8854166666666666VW CT;*/
+  font: 17px CT;
   border: 1px solid #e2e2e2;
   background: #fff;
-  padding: 5.4% 6.6%;
+  /*padding: 5.4% 6.6%;*/
+  padding: 0 19px;
+  height: 54px;
   width: 100%;
 }
 .contact__input input[type="submit"] {
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   padding: 0;
   background: #135b89;
   border: 0;
   color: #fff;
   text-transform: uppercase;
-  font: 0.8854166666666666VW CT;
-  padding: 5.4% 0;
+  /*font: 0.8854166666666666VW CT;*/
+  font: 13px CT;
+  /*padding: 5.4% 0;*/
+  height: 40px;
   letter-spacing: 0.06em;
   transition: all 0.2s ease;
 }
@@ -279,6 +289,24 @@ footer {
   color: #41474e;
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .contact__input label {
+    font-size: 13px;
+    top: 13px;
+    left: 16px;
+  }
+  .contact__input input[type="text"] {
+    height: 40px;
+    font-size: 13px;
+    padding: 0 16px;
+  }
+  .contact__input input[type="text"]::placeholder {
+    font-size: 13px;
+  }
+  .contact__input input[type="submit"] {
+    font-size: 13px;
+  }
+}
 @media screen and (max-width: 767px) {
   footer {
     width: 100%;
@@ -437,12 +465,16 @@ h3 {
   padding-top: 3%;
   padding-bottom: 3%;
   position: fixed;
-  overflow: auto;
+  /*overflow: auto;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 .sidebar .logo {
   width: 69.565217%;
   margin: 0 auto;
-  margin-bottom: 37%;
+  /*margin-bottom: 37%;*/
 }
 .sidebar .logo.flex {
   justify-content: flex-start;
@@ -458,6 +490,7 @@ h3 {
   width: 16.875%;
   font: 2.5VW CM;
   margin-right: 3.7%;
+  padding-left: 0.75%;
 }
 .sidebar .logo span.flex {
   justify-content: center;
@@ -466,7 +499,8 @@ h3 {
   display: none;
 }
 .sidebar__nav {
-  padding-bottom: 18%;
+  /*padding-bottom: 18%;*/
+  width: 100%;
 }
 .sidebar__nav ul {
   list-style: none;
@@ -490,11 +524,17 @@ h3 {
 .sidebar__nav ul li:hover .dropdown {
   display: flex !important;
 }
+.sidebar__border {
+  width: 70.565217%;
+  height: 1px;
+  background: #6197ba;
+  margin: 0 auto;
+}
 .sidebar__info {
-  border-top: 1px solid #6197ba;
+  /*border-top: 1px solid #6197ba;*/
   width: 70.565217%;
   margin: 0 auto;
-  padding-top: 19%;
+  /*padding-top: 19%;*/
   padding-left: 2%;
 }
 .sidebar__info p {
@@ -587,8 +627,6 @@ h3 {
 .banner {
   background: url(../img/banner.jpg) center center no-repeat;
   background-size: cover;
-  padding-top: 19.5%;
-  padding-bottom: 23%;
   margin-bottom: 6%;
 }
 .banner__text {
@@ -616,6 +654,13 @@ h3 {
 }
 .banner__center {
   text-align: center;
+}
+.banner_1 {
+  height: 100vh;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .banner_2 {
   padding-top: 8.5%;
@@ -661,6 +706,9 @@ h3 {
   width: 11.988086%;
 }
 
+.equipment {
+  margin-bottom: 5%;
+}
 .equipment.flex {
   align-items: stretch;
 }
@@ -774,7 +822,7 @@ h3 {
   width: 415px;
   padding: 85px 60px 40px;
   position: fixed;
-  margin-left: -375px;
+  margin-left: -207.5px;
   top: 0%;
   left: 50%;
   background: #fff;
@@ -926,6 +974,11 @@ h3 {
   width: 78%;
   margin: 0 auto;
 }
+.products__more .contact__input input[type="submit"] {
+  font: 0.8854166666666666VW CT;
+  padding: 5.4% 0;
+  height: auto;
+}
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   body {
@@ -968,10 +1021,13 @@ h3 {
     font-size: 17px;
     width: 44%;
   }
+  .sidebar__border {
+    display: none;
+  }
   .sidebar .logo {
     margin-bottom: 0;
     width: 90%;
-    padding: 5% 0;
+    padding: 16px 0;
   }
   .sidebar .logo span {
     font-size: 32px;
@@ -988,6 +1044,7 @@ h3 {
   }
   .sidebar .toggle {
     display: block;
+    right: 5%;
   }
 
   .icon {
@@ -1028,6 +1085,7 @@ h3 {
     display: block;
     background: #135b89;
     text-align: center;
+    width: 100%;
   }
   .mob__equipment span {
     font: 19px CT;
@@ -1071,11 +1129,11 @@ h3 {
 
   .banner {
     padding-top: 32.5%;
-    padding-bottom: 2%;
+    padding-bottom: 0;
   }
   .banner__text {
     width: 90%;
-    padding: 12.75% 3.8% 8%;
+    padding: 8% 3.8% 8%;
   }
   .banner__text p {
     font: 30px CT;
@@ -1085,6 +1143,10 @@ h3 {
   }
   .banner__right {
     text-align: center;
+  }
+  .banner_2 {
+    background: url(../img/banner.jpg) center 13% no-repeat;
+    background-size: 170%;
   }
 
   .title {
@@ -1201,6 +1263,9 @@ h3 {
   }
   .products__more .contact__input {
     width: 100%;
+  }
+  .products__more .contact__input input[type="submit"] {
+    font: 17px CT;
   }
   .products__more p {
     font-size: 34px;
