--- a/medvag/scss/layout/_content.scss
+++ b/medvag/scss/layout/_content.scss
@@ -83,11 +83,15 @@ h3{
 	padding-top: 3%;
 	padding-bottom: 3%;
 	position: fixed;
-	overflow: auto;
+	/*overflow: auto;*/
+	display: flex;
+	flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 	.logo{
 		width: 69.565217%;
 		margin: 0 auto;
-		margin-bottom: 37%;
+		/*margin-bottom: 37%;*/
 		&.flex{
 			justify-content: flex-start;
 		}
@@ -101,6 +105,7 @@ h3{
 				width: 16.875%;
 				font: 2.5VW CM;	
 				margin-right: 3.7%;
+				padding-left: 0.75%;
 			}
 			&.flex{
 				justify-content: center;
@@ -111,7 +116,8 @@ h3{
 		display: none;
 	}
 	&__nav{
-		padding-bottom: 18%;
+		/*padding-bottom: 18%;*/
+		width: 100%;
 		ul{
 			list-style: none;
 			li{
@@ -137,11 +143,17 @@ h3{
 			}
 		}
 	}
+	&__border{
+		width: 70.565217%;
+		height: 1px;
+		background: #6197ba;
+		margin: 0 auto;
+	}
 	&__info{
-		border-top: 1px solid #6197ba;
+		/*border-top: 1px solid #6197ba;*/
 		width: 70.565217%;
 		margin: 0 auto;
-		padding-top: 19%;
+		/*padding-top: 19%;*/
 		padding-left: 2%;
 		p{
 			color: #fff;
@@ -237,8 +249,6 @@ h3{
 .banner{
 	background: url(../img/banner.jpg) center center no-repeat;
 	background-size: cover;
-	padding-top: 19.5%;
-    padding-bottom: 23%;
     margin-bottom: 6%;
 	&__text{
 		width: 71.232877%;
@@ -265,6 +275,13 @@ h3{
 	}
 	&__center{
 		text-align: center;
+	}
+	&_1{
+		height: 100vh;
+    	padding: 0;
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
 	}
 	&_2{
 		padding-top: 8.5%;
@@ -311,6 +328,7 @@ h3{
 	}
 }
 .equipment{
+	margin-bottom: 5%;
 	&.flex{
 		align-items: stretch;
 	}
@@ -426,7 +444,7 @@ h3{
 	width: 415px;
 	padding: 85px 60px 40px;
 	position: fixed;
-	margin-left: -375px;
+	margin-left: -207.5px;
 	top: 0%;
 	left: 50%;
 	background: #fff;
@@ -580,6 +598,11 @@ h3{
 			&__input{
 				width: 78%;
 				margin: 0 auto;
+				input[type="submit"]{
+					font: 0.8854166666666666VW CT;
+					padding: 5.4% 0;
+					height: auto;
+				}
 			}
 		}
 	}
@@ -641,10 +664,13 @@ h3{
     			}
     		}
 		}
+		&__border{
+			display: none;
+		}
 		.logo{
 			margin-bottom: 0;
     		width: 90%;
-    		padding: 5% 0;
+    		padding: 16px 0;
 			span{
 				font-size: 32px;
 				color: #41474e;
@@ -661,6 +687,7 @@ h3{
 		}
 		.toggle{
 			display: block;
+			right: 5%;
 		}
 	}
 	.icon{
@@ -708,6 +735,7 @@ h3{
 			display: block;
 			background: #135b89;
 			text-align: center;
+			width: 100%;
 			span{
 				font: 19px CT;
 				display: inline-block;
@@ -750,10 +778,10 @@ h3{
 	}
 	.banner{
 		padding-top: 32.5%;
-    	padding-bottom: 2%;
+    	padding-bottom: 0;
 		&__text{
 			width: 90%;
-			padding: 12.75% 3.8% 8%;
+			padding: 8% 3.8% 8%;
 			p{
 				font: 30px CT;
 			}
@@ -763,6 +791,10 @@ h3{
 		}
 		&__right{
 			text-align: center;
+		}
+		&_2{
+		    background: url(../img/banner.jpg) center 13% no-repeat;
+			background-size: 170%;
 		}
 	}
 	.title{
@@ -884,6 +916,9 @@ h3{
 			.contact{
 				&__input{
 					width: 100%;
+					input[type="submit"]{
+						font: 17px CT;
+					}
 				}
 			}
 			p{
