--- a/medvag/scss/layout/_footer.scss
+++ b/medvag/scss/layout/_footer.scss
@@ -21,37 +21,47 @@ footer{
 	}
 	&__input{
 		position: relative;
-		width: 22%;
+		width: 28%;
+		/*width: 295px;*/
 		margin-right: 3%;
+		/*margin-right: 35px;*/
 		label{
 			color: #41474e;
-			font: 0.8854166666666666VW CT;
+			/*font: 0.8854166666666666VW CT;*/
+			font: 17px CT;
 			position: absolute;
 			letter-spacing: 0.06em;
-			top: 29%;
-    		left: 7%;
+			/*top: 29%;
+    		left: 7%;*/
+    		top: 17px;
+	    	left: 20px;
 			span{
 				color: #ea282d;
 			}
 		}
 		input[type="text"]{
 			color: #41474e;
-			font: 0.8854166666666666VW CT;
+			/*font: 0.8854166666666666VW CT;*/
+			font: 17px CT;
 			border: 1px solid #e2e2e2;
 			background: #fff;
-			padding: 5.4% 6.6%;
+			/*padding: 5.4% 6.6%;*/
+			padding: 0 19px;
+			height: 54px;
     		width: 100%;
 		}
 		input[type="submit"]{
 			width: 100%;
-			height: 100%;
+			/*height: 100%;*/
 			padding: 0;
 			background: #135b89;
 			border: 0;
 			color: #fff;
 			text-transform: uppercase;
-			font: 0.8854166666666666VW CT;
-			padding: 5.4% 0;
+			/*font: 0.8854166666666666VW CT;*/
+			font: 13px CT;
+			/*padding: 5.4% 0;*/
+			height: 40px;
 			letter-spacing: 0.06em;
 			transition: all 0.2s ease;
 			&:hover{
@@ -128,7 +138,26 @@ footer{
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-	
+	.contact{
+		&__input{
+			label{
+				font-size: 13px;
+	    		top: 13px;
+    			left: 16px;
+			}
+    		input[type="text"]{
+    			height: 40px;
+    			font-size: 13px;
+    			padding: 0 16px;
+    			&::placeholder{
+    				font-size: 13px;
+    			}
+    		}
+    		input[type="submit"]{
+    			font-size: 13px;
+    		}
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
