--- a/bitlab/css/style.css
+++ b/bitlab/css/style.css
@@ -230,6 +230,7 @@ header {
 .langs__item {
   padding: 0 12px;
   opacity: 0.5;
+  cursor: pointer;
 }
 .langs__item img {
   margin-right: 6px;
@@ -576,8 +577,8 @@ footer {
   justify-content: flex-start;
 }
 .socials a {
-  width: 47px;
-  height: 47px;
+  width: 58px;
+  height: 58px;
   background: #979798;
   margin-right: 30px;
   transition: all 0.3s ease;
@@ -588,11 +589,14 @@ footer {
 .socials a.flex {
   justify-content: center;
 }
-.socials a:hover {
-  background: #fff;
+.socials a:first-child:hover {
+  background: #0a6c85;
 }
-.socials a:hover img {
-  filter: invert(1);
+.socials a:nth-child(2):hover {
+  background: #8c07d1;
+}
+.socials a:last-child:hover {
+  background: #0f5ba3;
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
@@ -787,14 +791,13 @@ h3 {
 
 .icon-load {
   background: url(../img/loader.gif) no-repeat left top;
-  background-size: 100%;
-  width: 506px;
-  height: 300px;
+  width: 40px;
+  height: 40px;
   position: fixed;
   left: 50%;
   top: 50%;
-  margin-left: -253px;
-  margin-top: -150px;
+  margin-left: -20px;
+  margin-left: -20px;
   display: none;
 }
 
@@ -807,6 +810,10 @@ h3 {
 |                                     CONTENT                                 |
 ================================================================================
 */
+body {
+  height: auto;
+}
+
 .content {
   order: 2;
   -webkit-order: 2;
@@ -820,12 +827,24 @@ h3 {
 }
 
 .banner {
-  background: url(../img/town.jpg) no-repeat;
-  background-size: calc(100% + 50px);
+  /*background: url(../img/town.jpg) no-repeat;*/
+  /* background-size: calc(100% + 50px);*/
+  background: transparent;
   height: 700px;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 0 0 9999px rgba(206, 206, 206, 0.7) inset;
+  z-index: 3;
+  	/*&:hover{
+  		transform: translate3d(-22.0392px, -16.2519px, 0px);
+      	transform-style: preserve-3d;
+  	}*/
+}
+.banner__town {
+  position: absolute;
+  right: -2%;
+  top: -6%;
+  z-index: 1;
+  width: 105%;
 }
 .banner::before {
   content: "";
@@ -1024,6 +1043,26 @@ h3 {
   left: -90px;
   transform: rotate(180deg);
 }
+.team__slider2 {
+  width: 118px;
+}
+.team__slider2 .slick-list {
+  margin: 0;
+}
+.team__slider2 .slick-next {
+  right: -17px;
+  transform: rotate(180deg);
+}
+.team__slider2 .slick-next img {
+  width: auto;
+}
+.team__slider2 .slick-prev {
+  left: -17px;
+  transform: none;
+}
+.team__slider2 .slick-prev img {
+  width: auto;
+}
 .team__member {
   width: 360px;
   margin: 0 15px !important;
@@ -1053,6 +1092,7 @@ h3 {
 }
 .team__sert img {
   margin: 0 2px;
+  max-width: 55px;
 }
 .team__info {
   width: 217px;
@@ -1078,16 +1118,10 @@ h3 {
   width: 263px;
   height: 152px;
   background-color: #fff;
-  border: 1px solid #bdbdbd;
+  /*border: 1px solid #bdbdbd;*/
   background-repeat: no-repeat;
   background-position: 107% bottom;
   cursor: pointer;
-}
-.team__item:hover span {
-  transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -o-transform: scale(1.2);
 }
 .team__item.flex {
   justify-content: center;
@@ -1103,6 +1137,18 @@ h3 {
   font: 20px RL;
   color: #2c2a2b;
   text-align: center;
+}
+
+.spincrement1::after {
+  content: "+";
+  font: 52px GR;
+  color: #dc1837;
+}
+
+.spincrement4::after {
+  content: "+";
+  font: 52px GR;
+  color: #dc1837;
 }
 
 .title {
@@ -1132,6 +1178,11 @@ h3 {
 .services {
   padding: 60px 0 50px;
   background: #fff;
+}
+.services .scale {
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
+  transition: .25s;
 }
 .services__top {
   margin-bottom: 85px;
@@ -1183,6 +1234,7 @@ h3 {
   position: relative;
   padding-bottom: 7px;
   overflow: hidden;
+  transition: .25s;
 }
 .services__item1::after {
   content: url(../img/bg-serv.png);
@@ -1246,6 +1298,8 @@ h3 {
 .services__main {
   padding-top: 30px;
   position: relative;
+  padding-bottom: 75px;
+  height: calc(100% - 111px);
 }
 .services__row {
   border-bottom: 1px solid #e4e4e4;
@@ -1302,7 +1356,8 @@ h3 {
   border: 0;
   margin: 4px 16px;
   cursor: pointer;
-  position: relative;
+  position: absolute;
+  bottom: 6px;
   z-index: 4;
   overflow: hidden;
 }
@@ -1325,7 +1380,7 @@ h3 {
   padding: 15px 10px;
   position: absolute;
   left: 5px;
-  bottom: -8px;
+  bottom: 0;
   z-index: 5;
   width: calc(100% - 10px);
   height: 295px;
@@ -1348,13 +1403,15 @@ h3 {
 .services__form button {
   margin: 0;
   width: 100%;
+  position: relative;
+  bottom: 0;
 }
 .services__order {
   opacity: 0;
   -webkit-transform: scale(0.8);
   -ms-transform: scale(0.8);
   transform: scale(0.8);
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
   z-index: -1;
 }
 .services__order_active {
@@ -1587,7 +1644,8 @@ h3 {
   background: none;
   border: 0;
   position: absolute;
-  top: 42%;
+  top: 50%;
+  margin-top: -29px;
   z-index: 5;
   transition: filter 0.2s ease-in-out;
 }
@@ -1618,16 +1676,52 @@ h3 {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
-  box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.3);
-  border: 1px solid #fff;
+  /*box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.3);
+  border: 1px solid #fff;*/
   z-index: 999;
 }
 .portfolio__item:hover img {
   filter: blur(3px);
 }
+.portfolio__item:hover::before {
+  content: "";
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.3) inset;
+  width: 360px;
+  height: 200px;
+  position: absolute;
+  z-index: 1;
+  width: 500px;
+  height: 500px;
+}
+.portfolio__item:hover .portfolio__info, .portfolio__item:hover .portfolio__link {
+  opacity: 1;
+}
 .portfolio__item img {
   width: 100%;
   transition: all 0.1s ease;
+}
+.portfolio__info {
+  width: 240px;
+  height: 150px;
+  position: absolute;
+  z-index: 2;
+  left: 15px;
+  top: 20px;
+  opacity: 0;
+}
+.portfolio__info p {
+  color: #fff;
+  font: 16px/25px RL;
+}
+.portfolio__link {
+  color: #fff;
+  font: 16px/25px RL;
+  text-decoration: underline;
+  position: absolute;
+  z-index: 2;
+  left: 150px;
+  bottom: 13px;
+  opacity: 0;
 }
 .portfolio__name {
   font: 17.75px GR;
@@ -1638,11 +1732,13 @@ h3 {
   position: absolute;
   bottom: 8px;
   left: 8px;
+  z-index: 2;
 }
 .portfolio__tags {
   position: absolute;
   top: 13px;
   right: 9px;
+  z-index: 2;
 }
 .portfolio__tags.flex {
   flex-direction: column;
@@ -1878,7 +1974,7 @@ h3 {
   top: 0%;
   /*left: 50%;*/
   background-color: #1d1d1d;
-  background-image: url(../img/modal-bg.png);
+  background-image: url(../img/modal-bg.jpg);
   background-position: center;
   background-size: cover;
   z-index: 9999;
@@ -2084,7 +2180,7 @@ h3 {
 }
 
 .modal-send2, .modal-2 {
-  background-image: url(../img/modal-2.png);
+  background-image: url(../img/modal-2.jpg);
 }
 
 .overlay {
@@ -2591,6 +2687,7 @@ h3 {
 @media screen and (max-width: 767px) {
   .banner {
     height: 360px !important;
+    background: url(../img/town.jpg) no-repeat;
     background-position: right;
     padding-bottom: 20px;
     background-size: cover;
@@ -2616,6 +2713,9 @@ h3 {
     height: 50px;
     font: 16px/30px RL;
     margin-top: 25px;
+  }
+  .banner__town {
+    display: none;
   }
 
   .line_1 {
