--- a/medvag/css/style.css
+++ b/medvag/css/style.css
@@ -522,7 +522,7 @@ h3 {
   padding: 8.3% 0;
 }
 .sidebar__nav ul li:hover .dropdown {
-  display: flex !important;
+  display: flex;
 }
 .sidebar__border {
   width: 70.565217%;
@@ -550,7 +550,7 @@ h3 {
   left: 100%;
   width: 208%;
   padding: 11% 17%;
-  display: none !important;
+  display: none;
   z-index: 10;
 }
 .dropdown ul {
@@ -1000,26 +1000,31 @@ h3 {
   }
   .sidebar__nav {
     display: none;
-    width: 240px;
+    /*width: 240px;
     height: 322px;
-    padding-top: 85px;
+    padding-top: 85px;*/
     background: #135b89;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     right: 0;
     z-index: 2;
     box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.51);
+    width: 100%;
+    height: auto;
+    padding: 0;
+    position: static;
   }
   .sidebar__nav ul li {
     padding: 0;
     padding-left: 35px;
-  }
-  .sidebar__nav ul li.active {
-    display: none;
+    /*&.active{
+    	display: none;
+    }*/
   }
   .sidebar__nav ul li a {
     font-size: 17px;
     width: 44%;
+    padding: 20px 0;
   }
   .sidebar__border {
     display: none;
@@ -1047,9 +1052,42 @@ h3 {
     right: 5%;
   }
 
+  .dropdown {
+    position: static;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+  .dropdown ul {
+    width: 50%;
+  }
+  .dropdown ul li {
+    margin-bottom: 10px;
+    padding-left: 0;
+    width: 100%;
+  }
+  .dropdown ul li:last-child {
+    margin-bottom: 10px;
+  }
+  .dropdown ul.last {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .dropdown ul.last li {
+    width: 50%;
+  }
+
   .icon {
     width: 59px;
     margin-right: 13px;
+  }
+  .icon_1 img {
+    width: 35.5%;
   }
   .icon_2 img {
     width: 58%;
@@ -1066,6 +1104,11 @@ h3 {
     right: 17px;
     top: 25px;
     z-index: 5;
+    /*&_active{
+    	span{
+    		background: #fff;
+    	}
+    }*/
   }
   .toggle span {
     display: block;
@@ -1077,12 +1120,9 @@ h3 {
   .toggle span:last-child {
     margin-bottom: 0;
   }
-  .toggle_active span {
-    background: #fff;
-  }
 
   .mob__equipment {
-    display: block;
+    display: none;
     background: #135b89;
     text-align: center;
     width: 100%;
