--- a/medvag/scss/layout/_content.scss
+++ b/medvag/scss/layout/_content.scss
@@ -137,7 +137,7 @@ h3{
 				}
 				&:hover{
 					.dropdown{
-						display: flex !important;
+						display: flex;
 					}
 				}
 			}
@@ -169,7 +169,7 @@ h3{
 	left: 100%;
 	width: 208%;
 	padding: 11% 17%;
-	display: none !important;
+	display: none;
 	z-index: 10;
 	ul{
 		width: 20%;
@@ -641,25 +641,30 @@ h3{
     	overflow: visible;
 		&__nav{
 			display: none;
-    		width: 240px;
+    		/*width: 240px;
     		height: 322px;
-    		padding-top: 85px;
+    		padding-top: 85px;*/
     		background: #135b89;
-    		position: absolute;
+    		/*position: absolute;*/
     		top: 0;
     		right: 0;
     		z-index: 2;
     		box-shadow: 0px 1px 9px 0px rgba(0, 0, 0, 0.51);
+    		width: 100%;
+    		height: auto;
+    		padding: 0;
+    		position: static;
     		ul{
     			li{
     				padding: 0;
     				padding-left: 35px;
-    				&.active{
+    				/*&.active{
     					display: none;
-    				}
+    				}*/
     				a{
     					font-size: 17px;
     					width: 44%;
+    					padding: 20px 0;
     				}
     			}
     		}
@@ -690,9 +695,43 @@ h3{
 			right: 5%;
 		}
 	}
+	.dropdown{
+		position: static;
+    	display: flex;
+    	justify-content: flex-start;
+    	align-items: center;
+    	flex-wrap: wrap;
+    	padding: 0;
+    	ul{
+    		width: 50%;
+    		li{
+    			margin-bottom: 10px;
+    			padding-left: 0;
+    			width: 100%;
+    			&:last-child{
+    				margin-bottom: 10px;
+    			}
+    		}
+    		&.last{
+    			width: 100%;
+    			display: flex;
+    			justify-content: flex-start;
+    			align-items: center;
+    			flex-wrap: wrap;
+    			li{
+    				width: 50%;
+    			}
+    		}
+    	}
+	}
 	.icon{
 		width: 59px;
 		margin-right: 13px;
+		&_1{
+			img{
+				width: 35.5%;
+			}
+		}
 		&_2{
 			img{
 				width: 58%;
@@ -724,15 +763,15 @@ h3{
 				margin-bottom: 0;
 			}
 		}
-		&_active{
+		/*&_active{
 			span{
 				background: #fff;
 			}
-		}
+		}*/
 	}
 	.mob{
 		&__equipment{
-			display: block;
+			display: none;
 			background: #135b89;
 			text-align: center;
 			width: 100%;
